# panda_ros2

./: .gitignore  Doxyfile  README.md  justfile  launch.kitty-session  new.txt  start.sh  start_controller.sh  stop_controller.sh
docs/robotic_collaborative_cell/: book.toml
docs/robotic_collaborative_cell/src/: SUMMARY.md  installation.md
docs/robotic_collaborative_cell/src/overview/: demo_visulization_app.md  image_processing.md  kinect_ros2.md  overview.md  panda_interfaces.md  panda_utils.md  panda_world.md  yolo_ros.md
docs/robotic_collaborative_cell/src/usage/: robot_controller.md
src/Ros2_webcam_publisher-subscriber/: README.md  package.xml  setup.py
src/Ros2_webcam_publisher-subscriber/webcam_pubsub/: webcam_pub.py  webcam_sub.py
src/demo_visualization_app/: CMakeLists.txt  package.xml
src/demo_visualization_app/src/: color_node_app.cpp
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/include/image_processing/: constants.hpp  utils.hpp
src/image_processing/launch/: launch_register.py  launch_track.py  launch_yolo_tracker.py
src/image_processing/src/: skeleton_track.cpp  skeleton_tracker_yolo.cpp
src/kinect_ros2/: README.md
src/kinect_ros2/cfg/: calibration_depth.yaml  calibration_rgb.yaml
src/kinect_ros2/include/kinect_ros2/: kinect_ros2_component.hpp
src/kinect_ros2/launch/: stream_kinect.py
src/kinect_ros2/src/: kinect_ros2_component.cpp
src/onnxruntime/lib/: libonnxruntime.so.1.22.0
src/panda_interfaces/: CMakeLists.txt
src/panda_interfaces/action/: CartTraj.action  JointTraj.action  LoopCartTraj.action
src/panda_interfaces/msg/: CLIKParameters.msg  CartesianCommand.msg  HumanContact.msg  JointTorqueMeasure.msg  JointTorqueMeasureStamped.msg  JointsCommand.msg  JointsPos.msg  WrenchArray.msg  WristContact.msg
src/panda_interfaces/srv/: JointContact.srv
src/panda_utils/: CMakeLists.txt  package.xml
src/panda_utils/examples/: cart_traj_example.cpp  demo.cpp  estimate_external_forces.cpp  hand_and_force_estimation.cpp  hand_estimation.cpp  joint_traj_example.cpp  joint_trajectory_test.cpp  loop_cart_traj_example.cpp  pinocchio_example.cpp  send_joints_effort_cmd_client.cpp  send_joints_pos_cmd_client.cpp
src/panda_utils/include/panda_utils/: constants.hpp  debug_publisher.hpp  robot.hpp  robot_model.hpp  utils_func.hpp
src/panda_utils/launch/: launch_demo.py  launch_utils.py
src/panda_utils/src/: cart_traj.cpp  clik_client.cpp  clik_cmd_publisher.cpp  clik_server.cpp  constants.cpp  controller_manager.cpp  debug_publisher.cpp  demo_node.cpp  exponential_cart_traj.cpp  forward_kine_server.cpp  frame_publisher.cpp  human_presence.cpp  impedance_controller.cpp  inverse_dynamics_controller.cpp  jacobian_server.cpp  joint_traj.cpp  loop_cart_traj.cpp  pinocchio_example.cpp  robot_model.cpp  send_joints_effort_cmd.cpp  send_joints_pos_cmd.cpp
src/panda_world/: CMakeLists.txt
src/panda_world/config/: bridge.yaml  config.rviz  config2.rviz
src/panda_world/launch/: launch_sim.py
src/panda_world/models/: camera.urdf
src/panda_world/models/panda/: fr3_franka_hand.urdf  panda.urdf  panda_fr3.sdf  panda_fr3.urdf  panda_fr3_no_table.urdf  panda_fr3_rviz.urdf  panda_pos_cmd.urdf
src/panda_world/src/: force_torque_sensors_publisher.cpp  joint_state_publisher_effort_patcher.cpp  torque_sensors_publisher.cpp
src/panda_world/worlds/: empty_world.sdf  world_with_panda.sdf
src/yolo_ros/yolo_ros/yolo_ros/: detect_3d_node.py
