<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gianlu780@gmail.com">snasn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>panda_interfaces</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>ros2launch</exec_depend>
  <build_depend>pinocchio</build_depend>
  <exec_depend>pinocchio</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
